[T266] lazy loading table add btn shift on top right + fixed add button text error

--- a/assets/client/static-assets/css/unitpal.css
+++ b/assets/client/static-assets/css/unitpal.css
@@ -1186,7 +1186,7 @@ lazy-loading-table {
     font-size: 30px;
 }
 .th-button-box>span {
-    font-size: 12px;
+    font-size: 13px;
     height: 30px;
     text-align: right;
     white-space: nowrap;
@@ -1226,20 +1226,11 @@ table.lazy-loading tfoot {
   flex-shrink: 0;
 }
 div.table-select-items {
-    display: inline;
-}
-div.table-select-items>label {
     float: left;
-    font-weight: normal;
-    font-size: 14px;
-    padding-top: 6px;
-}
-div.table-select-items>div {
-    float: left;
-    padding-left: 3px;
+    padding-left: 10px;
 }
 @media screen and (max-width: 850px) {
-    div.table-select-items>label {
+    div.table-select-items {
         display: none;
     }
 }
